targetapp/deployment-aks-shard2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: shard2   # Change to shard2 for second deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: buddhimah/flask-performance-app:latest
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: "1000m"
            memory: "500Mi"
          requests:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: shard2   # Change to shard2
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  namespace: shard2   # Change to shard2
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - host: mscbuddhima.com
    http:
      paths:
      - path: /flask-api
        pathType: Prefix
        backend:
          service:
            name: flask-app-service
            port:
              number: 5000
